# orion

./: .travis.yml  Framer.cpp  Framer.h  LICENSE  README.md
.circleci/: config.yml
.github/workflows/: main.yml
docs/design/: client_receive_reply.puml  major_send_receive.puml  master_send_receive.puml  minor_receive_reply.puml  pdu.puml  send.puml
orion_protocol/: CMakeLists.txt  package.xml
orion_protocol/include/orion_protocol/: framer.h  orion_assert.h  orion_buffered_io.h  orion_byte_stream.h  orion_circular_buffer.h  orion_cobs_framer.h  orion_com_transport.h  orion_communication.h  orion_communication.hpp  orion_crc.h  orion_data_link_layer.h  orion_error.h  orion_exception.h  orion_frame_transport.h  orion_frame_transport.hpp  orion_framer.h  orion_header.h  orion_header.hpp  orion_major.h  orion_major.hpp  orion_master.h  orion_memory.h  orion_minor.h  orion_minor.hpp  orion_network_layer.h  orion_serial_port.h  orion_serial_port.hpp  orion_simple_network.h  orion_tcp_serial_bridge.h  orion_tcp_serial_bridge.hpp  orion_timeout.h  orion_timeout.hpp  orion_transport.h  orion_transport.hpp
orion_protocol/src/: framer.cpp  main.cpp  orion_byte_stream.cpp  orion_cobs_framer.cpp  orion_com_transport.cpp  orion_crc.cpp  orion_frame_transport.cpp  orion_framer.cpp  orion_major.cpp  orion_master.cpp  orion_minor.cpp  orion_serial_port.cpp  orion_simple_network.cpp  orion_tcp_serial_bridge.cpp  orion_timeout.cpp
orion_protocol/src/common/: orion_circular_buffer.c  orion_crc.c  orion_frame_transport.cpp  orion_timeout.c
orion_protocol/src/common/orion_assert/: assert.c
orion_protocol/src/common/orion_framer/: cobs_framer.c
orion_protocol/src/common/orion_memory/: heap_memory.c
orion_protocol/src/common/orion_transport/: frame_transport.c
orion_protocol/src/major/: orion_major.cpp
orion_protocol/src/major/orion_assert/: ros_assert.cpp
orion_protocol/src/major/orion_communication/: serial_port.c  tcp_serial_bridge.c
orion_protocol/src/minor/: orion_minor.c  orion_minor.cpp
orion_protocol/src/minor/orion_communication/: virtual_com_port.c
orion_protocol/test/: test_orion_circular_buffer.cpp  test_orion_cobs_framer.cpp  test_orion_frame_transport.cpp  test_orion_framer.cpp  test_orion_major.cpp  test_orion_master.cpp  test_orion_minor.cpp  test_orion_protocol.cpp  test_orion_test_suite.cpp  test_tcp_bridge_integration.cpp  test_tcp_bridge_integration.test  test_tcp_server.py
orion_protocol/test/include/gmock-global/: CPPLINT.cfg
