<?xml version="1.0"?>
<package format="2">
  <name>orion_protocol</name>
  <version>0.0.1</version>
  <description>The orion_protocol package</description>

  <maintainer email="ROS.Ukraine@todo.todo">ROS Ukraine Community</maintainer>

  <author>Bogdan Yarushevskyy</author>
  <author>Andriy Petlovanyy</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <!--<build_depend>message_generation</build_depend>-->
  <!--<exec_depend>message_runtime</exec_depend>-->
</package>
