<?xml version="1.0"?>
<package format="2">
  <name>orion_protocol</name>
  <version>0.0.1</version>
  <description>The orion_protocol package</description>

  <maintainer email="ROS.Ukraine@todo.todo">ROS Ukraine Community</maintainer>

  <author>Bogdan Yarushevskyy</author>
  <author>Andriy Petlovanyy</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <test_depend>rospy</test_depend>
  <test_depend>gtest</test_depend>
  <test_depend>gmock</test_depend>
  <test_depend>rostest</test_depend>
</package>
